--- a/mamar-web/src/app/doc/SegmentMap.module.scss
+++ b/mamar-web/src/app/doc/SegmentMap.module.scss
@@ -11,6 +11,7 @@ $trackHeight: 70px;
     grid-template-columns: 225px auto;
 
     overflow-y: auto;
+    scrollbar-width: none;
 }
 
 .track {
